{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 68,
  "lineage": "42fad09c-b430-3eff-5134-41d67347f543",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:security-group/sg-08dda1f1534f41a21",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-08dda1f1534f41a21",
            "ingress": [],
            "name": "amazon-prime-cluster-cluster-20250215063855986000000009",
            "name_prefix": "amazon-prime-cluster-cluster-",
            "owner_id": "253490769734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "amazon-prime-cluster",
              "Name": "amazon-prime-cluster-cluster"
            },
            "tags_all": {
              "Example": "amazon-prime-cluster",
              "Name": "amazon-prime-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:security-group/sg-074ede935d0d2cdbb",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-074ede935d0d2cdbb",
            "ingress": [],
            "name": "amazon-prime-cluster-node-2025021506385599730000000a",
            "name_prefix": "amazon-prime-cluster-node-",
            "owner_id": "253490769734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "amazon-prime-cluster",
              "Name": "amazon-prime-cluster-node",
              "kubernetes.io/cluster/amazon-prime-cluster": "owned"
            },
            "tags_all": {
              "Example": "amazon-prime-cluster",
              "Name": "amazon-prime-cluster-node",
              "kubernetes.io/cluster/amazon-prime-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-765324616",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08dda1f1534f41a21",
            "security_group_rule_id": "sgr-0aea08d00cbbedb3c",
            "self": false,
            "source_security_group_id": "sg-074ede935d0d2cdbb",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-377081730",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-074ede935d0d2cdbb",
            "security_group_rule_id": "sgr-0b929084a8c9b3815",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-896851276",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074ede935d0d2cdbb",
            "security_group_rule_id": "sgr-00311df58a82eb1e4",
            "self": false,
            "source_security_group_id": "sg-08dda1f1534f41a21",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1398840481",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074ede935d0d2cdbb",
            "security_group_rule_id": "sgr-0c6f01731d5895f04",
            "self": false,
            "source_security_group_id": "sg-08dda1f1534f41a21",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1708983497",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074ede935d0d2cdbb",
            "security_group_rule_id": "sgr-03eb3072c252bfe05",
            "self": false,
            "source_security_group_id": "sg-08dda1f1534f41a21",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1988180202",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074ede935d0d2cdbb",
            "security_group_rule_id": "sgr-0494d90f1185f9f00",
            "self": false,
            "source_security_group_id": "sg-08dda1f1534f41a21",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-304089891",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074ede935d0d2cdbb",
            "security_group_rule_id": "sgr-0a4a69cee85f361ba",
            "self": false,
            "source_security_group_id": "sg-08dda1f1534f41a21",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-34460060",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074ede935d0d2cdbb",
            "security_group_rule_id": "sgr-009992e415d68b0cf",
            "self": false,
            "source_security_group_id": "sg-08dda1f1534f41a21",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-828953727",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074ede935d0d2cdbb",
            "security_group_rule_id": "sgr-074aebed2773f2da9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1216036411",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074ede935d0d2cdbb",
            "security_group_rule_id": "sgr-096c717bcd830d75f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-333144618",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-074ede935d0d2cdbb",
            "security_group_rule_id": "sgr-05a6272c3acdfb5f4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:network-acl/acl-00ae0ca93eb5766b6",
            "default_network_acl_id": "acl-00ae0ca93eb5766b6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00ae0ca93eb5766b6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "253490769734",
            "subnet_ids": [
              "subnet-0020cbb9824f87dcb",
              "subnet-0391b7547ab7eb3a2",
              "subnet-040cd8dba05d2656b",
              "subnet-09c15546d297270f4"
            ],
            "tags": {
              "Name": "amazon-prime-cluster-default"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-default"
            },
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:route-table/rtb-0f8f19baefd78d383",
            "default_route_table_id": "rtb-0f8f19baefd78d383",
            "id": "rtb-0f8f19baefd78d383",
            "owner_id": "253490769734",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "amazon-prime-cluster-default"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:security-group/sg-0776f1ec0c0673fc0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0776f1ec0c0673fc0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "253490769734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "amazon-prime-cluster-default"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-default"
            },
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050cce5013a90f874",
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:elastic-ip/eipalloc-050cce5013a90f874",
            "domain": "vpc",
            "id": "eipalloc-050cce5013a90f874",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-13-238-124-0.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.238.124.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "amazon-prime-cluster-ap-southeast-2a"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-ap-southeast-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f456802251448d2",
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:elastic-ip/eipalloc-06f456802251448d2",
            "domain": "vpc",
            "id": "eipalloc-06f456802251448d2",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-13-238-122-155.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.238.122.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "amazon-prime-cluster-ap-southeast-2b"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-ap-southeast-2b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:internet-gateway/igw-02dc80494aace9bb6",
            "id": "igw-02dc80494aace9bb6",
            "owner_id": "253490769734",
            "tags": {
              "Name": "amazon-prime-cluster"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster"
            },
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050cce5013a90f874",
            "association_id": "eipassoc-0d5521de0279c0ac3",
            "connectivity_type": "public",
            "id": "nat-0c90d31f50cc9391b",
            "network_interface_id": "eni-016ccd2e3dd3c4747",
            "private_ip": "10.0.1.35",
            "public_ip": "13.238.124.0",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0671a71f3edee5049",
            "tags": {
              "Name": "amazon-prime-cluster-ap-southeast-2a"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-ap-southeast-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f456802251448d2",
            "association_id": "eipassoc-0234b965dbdcca775",
            "connectivity_type": "public",
            "id": "nat-0acb95ddf7c1d9e7a",
            "network_interface_id": "eni-0361ccac5ea144d5c",
            "private_ip": "10.0.2.118",
            "public_ip": "13.238.122.155",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06ed9bfc042a428ad",
            "tags": {
              "Name": "amazon-prime-cluster-ap-southeast-2b"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-ap-southeast-2b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0571a081f038c6cf51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c90d31f50cc9391b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0571a081f038c6cf5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0534e83d1b19c595f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0acb95ddf7c1d9e7a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0534e83d1b19c595f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02dc80494aace9bb6",
            "id": "r-rtb-09f8a442acbd0de171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09f8a442acbd0de17",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:route-table/rtb-0165d09fba13bf3aa",
            "id": "rtb-0165d09fba13bf3aa",
            "owner_id": "253490769734",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amazon-prime-cluster-intra"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:route-table/rtb-0571a081f038c6cf5",
            "id": "rtb-0571a081f038c6cf5",
            "owner_id": "253490769734",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amazon-prime-cluster-private-ap-southeast-2a"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-private-ap-southeast-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:route-table/rtb-0534e83d1b19c595f",
            "id": "rtb-0534e83d1b19c595f",
            "owner_id": "253490769734",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amazon-prime-cluster-private-ap-southeast-2b"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-private-ap-southeast-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:route-table/rtb-09f8a442acbd0de17",
            "id": "rtb-09f8a442acbd0de17",
            "owner_id": "253490769734",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amazon-prime-cluster-public"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caaf20734c83350f",
            "route_table_id": "rtb-0165d09fba13bf3aa",
            "subnet_id": "subnet-09c15546d297270f4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbdcc2a25377f80a",
            "route_table_id": "rtb-0165d09fba13bf3aa",
            "subnet_id": "subnet-0391b7547ab7eb3a2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e002ba5ed657fd5a",
            "route_table_id": "rtb-0571a081f038c6cf5",
            "subnet_id": "subnet-040cd8dba05d2656b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f7238d4b91c8452",
            "route_table_id": "rtb-0534e83d1b19c595f",
            "subnet_id": "subnet-0020cbb9824f87dcb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a082b7adb85e16f8",
            "route_table_id": "rtb-09f8a442acbd0de17",
            "subnet_id": "subnet-0671a71f3edee5049"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6d628573c1258c6",
            "route_table_id": "rtb-09f8a442acbd0de17",
            "subnet_id": "subnet-06ed9bfc042a428ad"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:subnet/subnet-09c15546d297270f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c15546d297270f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253490769734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-prime-cluster-intra-ap-southeast-2a"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-intra-ap-southeast-2a"
            },
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:subnet/subnet-0391b7547ab7eb3a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0391b7547ab7eb3a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253490769734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-prime-cluster-intra-ap-southeast-2b"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-intra-ap-southeast-2b"
            },
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:subnet/subnet-040cd8dba05d2656b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040cd8dba05d2656b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253490769734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-prime-cluster-private-ap-southeast-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-private-ap-southeast-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:subnet/subnet-0020cbb9824f87dcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0020cbb9824f87dcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253490769734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-prime-cluster-private-ap-southeast-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-private-ap-southeast-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:subnet/subnet-0671a71f3edee5049",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0671a71f3edee5049",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253490769734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-prime-cluster-public-ap-southeast-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-public-ap-southeast-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:subnet/subnet-06ed9bfc042a428ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ed9bfc042a428ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253490769734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amazon-prime-cluster-public-ap-southeast-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster-public-ap-southeast-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05506a28468c7251f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:253490769734:vpc/vpc-05506a28468c7251f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00ae0ca93eb5766b6",
            "default_route_table_id": "rtb-0f8f19baefd78d383",
            "default_security_group_id": "sg-0776f1ec0c0673fc0",
            "dhcp_options_id": "dopt-08e906b9f4cdc2c7c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05506a28468c7251f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8f19baefd78d383",
            "owner_id": "253490769734",
            "tags": {
              "Name": "amazon-prime-cluster"
            },
            "tags_all": {
              "Name": "amazon-prime-cluster"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}